[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/Dialog/fade_animation_effect_dialog.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.196078, 0.133333, 0.133333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="InputEventKey" id=3]
scancode = 16777221

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="fade_animation_effect_dialog" type="Panel"]
margin_left = 36.0
margin_top = 94.0
margin_right = 449.0
margin_bottom = 308.0
rect_min_size = Vector2( 413, 209 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 397.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center][color=red]FADE ANIMATION[/color][/center]

Fade creates a fade effect over the text that is animated.
[indent][color=#2df41d]路 mode[/color]: Select fade type (Fade-In or Fade-Out).
[color=#2df41d]路 time[/color]: Duration of the effect (in seconds).[/indent]"
text = "FADE ANIMATION

Fade creates a fade effect over the text that is animated.
	路 mode: Select fade type (Fade-In or Fade-Out).
路 time: Duration of the effect (in seconds)."

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 397.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.176471, 0.956863, 0.113725, 1 )
text = "mode:"

[node name="fade_in_CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 129.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
pressed = true
group = SubResource( 2 )
text = "Fade In"

[node name="fade_out_CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 133.0
margin_right = 219.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
group = SubResource( 2 )
text = "Fade Out"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 397.0
margin_bottom = 156.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.176471, 0.956863, 0.113725, 1 )
text = "time:"

[node name="time_SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 128.0
margin_bottom = 24.0
min_value = 0.1
max_value = 1000.0
step = 0.1
value = 5.0
allow_greater = true

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 132.0
margin_top = 5.0
margin_right = 185.0
margin_bottom = 19.0
text = "seconds"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 178.0
margin_right = 397.0
margin_bottom = 198.0
size_flags_vertical = 10
alignment = 2

[node name="OK_Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 308.0
margin_right = 339.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
shortcut = SubResource( 4 )
text = "OK"

[node name="Cancel_Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 343.0
margin_right = 397.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Cancel"
[connection signal="visibility_changed" from="." to="." method="_on_fade_animation_effect_dialog_visibility_changed"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/OK_Button" to="." method="_on_OK_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/Cancel_Button" to="." method="_on_Cancel_Button_button_down"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer3/Cancel_Button" to="." method="_on_Cancel_Button_focus_exited"]
